--- a/.github/workflows/luci-app-passwall CI.yml
+++ b/.github/workflows/luci-app-passwall CI.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-18.04
     
     env:
-      URL: https://downloads.openwrt.org/snapshots/targets/x86/64/openwrt-sdk-x86-64_gcc-8.3.0_musl.Linux-x86_64.tar.xz
+      #URL: https://downloads.openwrt.org/snapshots/targets/x86/64/openwrt-sdk-x86-64_gcc-8.3.0_musl.Linux-x86_64.tar.xz
+      URL: https://downloads.openwrt.org/snapshots/targets/brcm2708/bcm2711/openwrt-sdk-brcm2708-bcm2711_gcc-8.3.0_musl.Linux-x86_64.tar.xz
       REPF: ${{ github.repository }}
       PKGN: ${{ 'luci-app-passwall' }}
 
