--- a/config
+++ b/config
@@ -25,15 +25,21 @@ CONFIG_AUTOREMOVE=y
 CONFIG_IN_SDK=y
 CONFIG_MODULES=y
 CONFIG_HAVE_DOT_CONFIG=y
-CONFIG_TARGET_x86=y
-CONFIG_TARGET_x86_64=y
-CONFIG_TARGET_x86_64_Generic=y
-CONFIG_HAS_SUBTARGETS=y
-CONFIG_TARGET_BOARD="x86"
-CONFIG_TARGET_SUBTARGET="64"
-CONFIG_TARGET_PROFILE="Generic"
-CONFIG_TARGET_ARCH_PACKAGES="x86_64"
-CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe"
+#####
+#CONFIG_TARGET_x86=y
+#CONFIG_TARGET_x86_64=y
+#CONFIG_TARGET_x86_64_Generic=y
+#CONFIG_HAS_SUBTARGETS=y
+#CONFIG_TARGET_BOARD="x86"
+#CONFIG_TARGET_SUBTARGET="64"
+#CONFIG_TARGET_PROFILE="Generic"
+#CONFIG_TARGET_ARCH_PACKAGES="x86_64"
+#CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe"
+#####
+CONFIG_TARGET_brcm2708=y
+CONFIG_TARGET_brcm2708_bcm2711=y
+CONFIG_TARGET_brcm2708_bcm2711_DEVICE_rpi-4=y
+
 CONFIG_CPU_TYPE=" "
 CONFIG_LINUX_4_19=y
 CONFIG_DEFAULT_base-files=y
